# Tapestry

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
skills/tapestry/: SKILL.md  pyproject.toml
skills/tapestry/_data/: .gitignore
skills/tapestry/_src/: __init__.py  config.py  fetch.py  ingest.py  links.py  models.py  parse.py  registry.py  router.py  store.py
skills/tapestry/_src/crawlers/: __init__.py  run.py
skills/tapestry/_src/crawlers/generic_html/: __init__.py
skills/tapestry/_src/crawlers/hackernews/: __init__.py
skills/tapestry/_src/crawlers/reddit/: __init__.py
skills/tapestry/_src/crawlers/weibo/: __init__.py
skills/tapestry/_src/crawlers/weixin/: __init__.py
skills/tapestry/_src/crawlers/x/: __init__.py
skills/tapestry/_src/crawlers/xiaohongshu/: __init__.py
skills/tapestry/_src/crawlers/zhihu/: README.md  __init__.py  package-lock.json  package.json
skills/tapestry/_src/crawlers/zhihu/scripts/: smoke.mjs
skills/tapestry/_src/crawlers/zhihu/src/: cli.mjs  config.mjs  fetcher.mjs  request-options.mjs  server.mjs
skills/tapestry/_src/crawlers/zhihu/src/parsers/: answer.mjs  column-article.mjs  common.mjs  index.mjs  profile.mjs  question.mjs
skills/tapestry/_src/crawlers/zhihu/test/_tests/: cli.test.mjs  parsers-common.test.mjs  server.test.mjs
skills/tapestry/_tests/: test_parse.py  test_router.py
skills/tapestry/_tests/fixtures/: sample_discussion.html
skills/tapestry/config/: README.md  tapestry.config.example.json  tapestry.config.json
skills/tapestry/display/: SKILL.md
skills/tapestry/display/_scripts/: publish_viewer.py
skills/tapestry/display/_ui/: data  index.html
skills/tapestry/display/_ui/assets/: app.js  styles.css
skills/tapestry/export/: SKILL.md
skills/tapestry/export/_scripts/: export.py
skills/tapestry/feed/: SKILL.md
skills/tapestry/feed/_specs/: _index.md  _shared-standard.md  generic_html.md  hackernews_discussion.md  reddit_thread.md  weibo_post.md  x_post.md  xiaohongshu_note.md  xiaohongshu_profile.md  zhihu_answer.md  zhihu_profile.md  zhihu_question.md  zhihu_zhuanlan_article.md
skills/tapestry/ingest/: SKILL.md
skills/tapestry/ingest/_scripts/: run.py
skills/tapestry/init-deps-install/: README.md  SKILL.md
skills/tapestry/init-deps-install/_scripts/: check_initialized.py  install_deps.py  mark_initialized.py  parse_deps.py  setup_config.py  verify_install.py
skills/tapestry/subscriptions/: SKILL.md
skills/tapestry/subscriptions/_scripts/: run.py
skills/tapestry/synthesis/: SKILL.md
skills/tapestry/synthesis/_kb_blueprint/knowledge-base/ai-and-research/: index.md
skills/tapestry/synthesis/_kb_blueprint/knowledge-base/community-qa-and-discussion/: index.md
skills/tapestry/synthesis/_kb_blueprint/knowledge-base/community-qa-and-discussion/practical-identification-and-qa/: index.md
skills/tapestry/synthesis/_kb_blueprint/knowledge-base/general-reference/: index.md
skills/tapestry/synthesis/_kb_blueprint/knowledge-base/people-and-profiles/researchers-and-creators/: index.md
skills/tapestry/synthesis/_kb_rules/: _shared-governance.md  chapter-decision-rules.md  topic-taxonomy.md
skills/tapestry/synthesis/_kb_templates/: README.md
skills/tapestry/synthesis/_kb_templates/comprehensive/: index.md
skills/tapestry/synthesis/_kb_templates/comprehensive/ai-and-research/model-training-and-optimization/: index.md
skills/tapestry/synthesis/_kb_templates/comprehensive/ai-and-research/research-tracking-and-papers/: index.md
skills/tapestry/synthesis/_kb_templates/comprehensive/markets-and-trading/: index.md
skills/tapestry/synthesis/_kb_templates/comprehensive/people-and-profiles/: index.md
skills/tapestry/synthesis/_kb_templates/default/: index.md
skills/tapestry/synthesis/_scripts/: README.md  bootstrap_kb.py  load_context.py
skills/tapestry/visual-card/: AGENT_DRIVEN.md  README.md  SKILL.md
skills/tapestry/visual-card/_scripts/: generate_card.py  generate_card_agent.py  generate_card_from_synthesis.py  generate_card_legacy.py  prepare_card_context.py
skills/tapestry/visual-card/_templates/: card_template_spec.md
(+74 files in other folders)
