[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapestry"
version = "0.1.0"
description = "Bundle-first Tapestry skill pack for crawling, organizing, and synthesizing web content"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tapestry Contributors"}
]
dependencies = [
    "httpx>=0.27.0",
    "Markdown>=3.6",
    "pydantic>=2.0.0",
    "pymdown-extensions>=10.0",
    "selectolax>=0.3.0",
    "readability-lxml>=0.8.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["_src", "_src.crawlers"]
